manipulator_work/manipulator_ros2_workspace/log/build_2025-02-19_17-03-16/manipulator_package/stderr.log
  File "/home/mscrobotics2425laptop27/Documents/University/robotic_systems_design_project/manipulator_work/manipulator_ros2_workspace/install/manipulator_package/lib/python3.10/site-packages/manipulator_package/moveit_control_node.py", line 12
    class MoveitControlNode(Node, thread: Thread):
                                        ^
SyntaxError: invalid syntax

